--- a/meeting 2/chapter 2 notes.Rmd
+++ b/meeting 2/chapter 2 notes.Rmd
@@ -245,15 +245,101 @@ The book mentions the blue line indicating the seasonality, but I don't find it 
 I tried to change the domain with the following, but it didn't do what I was aiming for.
 
 ```{r}
-a10 %>% 
-  gg_subseries(Cost) +
-  labs(y = '$ (millions)',
-       title = 'Australian antidiabetic drug sales',
-       # This does not do the thing. Anyone know how?
-       period = 'year')
+# This does not do the thing. Anyone know how?
+
+# a10 %>% 
+#   gg_subseries(Cost) +
+#   labs(y = '$ (millions)',
+#        title = 'Australian antidiabetic drug sales',
+#        period = 'year')
+```
+```{r}
+head(tourism)
+
+holidays <- tourism %>% 
+  filter(Purpose == 'Holiday') %>% 
+  group_by(State) %>% 
+  summarise(Trips = sum(Trips))
+
+head(holidays)
 ```
 
+```{r}
+autoplot(holidays, Trips) +
+  labs(y = "Overnight trips ('000)",
+       title = 'Australian domestic holidays')
 
+```
+```{r}
+gg_season(holidays, Trips) +
+  labs(y = "Overnight trups('000)",
+       title = "Australian domestic holidays")
+```
+```{r}
+holidays %>% 
+  gg_subseries(Trips) +
+  labs(y = "Overnight trips ('000)",
+       title = "Australian domestic holdays")
+```
+Above, you can see most of the regions have seen an increase over the mean in the past few years.
+
+## Scatterplots [[section link]](https://otexts.com/fpp3/scatterplots.html)
+
+```{r}
+vic_elec %>%
+  filter(year(Time) == 2014) %>%
+  autoplot(Demand) +
+  labs(y = "GW",
+       title = "Half-hourly electricity demand: Victoria")
+```
+```{r}
+vic_elec %>%
+  filter(year(Time) == 2014) %>%
+  autoplot(Temperature) +
+  labs(
+    y = "Degrees Celsius",
+    title = "Half-hourly temperatures: Melbourne, Australia"
+  )
+```
+
+```{r}
+vic_elec %>%
+  filter(year(Time) == 2014) %>%
+  ggplot(aes(x = Temperature, y = Demand)) +
+  geom_point() +
+  labs(x = "Temperature (degrees Celsius)",
+       y = "Electricity demand (GW)")
+
+```
+
+Figures 2.14 and 2.15 display correlations between various variables. Wikipedia article on Correlation: [[wikipedia]](https://en.wikipedia.org/wiki/Correlation).
+
+### Scatterplot matrices [[subsection link]](https://otexts.com/fpp3/scatterplots.html#scatterplot-matrices)
+
+```{r}
+visitors <- tourism %>%
+  group_by(State) %>%
+  summarise(Trips = sum(Trips))
+head(visitors)
+```
+
+```{r}
+visitors %>%
+  ggplot(aes(x = Quarter, y = Trips)) +
+  geom_line() +
+  facet_grid(vars(State), scales = "free_y") +
+  labs(title = "Australian domestic tourism",
+       y= "Overnight trips ('000)")
+```
+```{r, results='hide', warning=FALSE, message=FALSE}
+library(GGally)
+```
+
+```{r}
+visitors %>%
+  pivot_wider(values_from=Trips, names_from=State) %>%
+  GGally::ggpairs(columns = 2:9)
+```
 
 
 
